<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="category-general"
        android:title="@string/settings_general_section_header" >
        <Preference
            android:key="clear-cache"
            android:summary="@string/computing_size"
            android:title="@string/clear_cache_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_about_header" >
        <Preference
            android:key="os-licenses"
            android:summary="@string/os_licenses_summary"
            android:title="@string/os_licenses_label" />
        <Preference
            android:key="build-version"
            android:title="@string/settings_build_version" />
        <PreferenceScreen
            android:summary="@string/source_code_summary"
            android:title="@string/source_code_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/lytsing/weibo" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
