<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<LinearLayout
		android:gravity="center_vertical|center_horizontal"
		android:orientation="horizontal"
		android:id="@+id/loading_more"
		android:visibility="gone"
		android:layout_width="fill_parent"
		android:layout_height="?android:attr/listPreferredItemHeight"
		>
		<ProgressBar
			android:id="@+android:id/progress_large"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			style="?android:attr/progressBarStyleSmall"
			>
		</ProgressBar>
		<TextView
			android:id="@+id/loading_msg"
			android:paddingLeft="6.0dip"
			android:paddingTop="2.0dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="1.0dip"
			android:text="@string/loading"
			>
		</TextView>
	</LinearLayout>
	<LinearLayout
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:id="@+id/error_footer"
		android:paddingLeft="5.0dip"
		android:paddingRight="5.0dip"
		android:visibility="gone"
		android:layout_width="fill_parent"
		android:layout_height="?android:attr/listPreferredItemHeight"
		>
		<TextView
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/error_msg"
			android:layout_width="0.0dip"
			android:layout_height="wrap_content"
			android:text="@string/network_error_list_footer"
			android:drawableLeft="@drawable/ic_network_error"
			android:drawablePadding="5.0dip"
			android:layout_weight="1.0"
			>
		</TextView>
		<Button
			android:id="@+id/retry_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minWidth="80.0dip"
			android:text="@string/retry"
			>
		</Button>
	</LinearLayout>
</LinearLayout>
